bad/assign_field_bool_of_field_string.example_compiler_output
ERROR
[1mbad/assign_field_bool_of_field_string.lat:10:16: [1;31merror: [0;1massigning to `boolean` from incompatible type `string`[m
	(new D).c.fld = "";
	              [1;32m^[m
